Se le realizaron cambios al main.js

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                         <input id="clMonto" type="number" placeholder="Escribe aquí">
                     </div>
                     <div class="group-data two-columns">
-                        <label for="#" id="clTiempo" >Tiempo de Inversión:</label>
-                        <select>
+                        <label for="#">Tiempo de Inversión:</label>
+                        <select id="clTiempo">
                             <option>Elige una opción</option>
                             <option value="1">1 Año</option>
                             <option value="2">2 Años</option>
@@ -53,7 +53,7 @@
                 </div>
                 <!-- La clase disabled debe ponerse en el contendor anterior para mostrar el resultado -->
                 <div class="post-simulation  disabled" id="post-simulation">
-                    <h3>Teniendo en cuenta que tu tiempo de inversión fue de <span id="showTiempo">12 MESES</span> te pagaremos el <span>1.6%</span id="showInteres" > de interés mensual.</h3>
+                    <h3>Teniendo en cuenta que tu tiempo de inversión fue de <span id="showTiempo">12 MESES</span> te pagaremos el <span id="showInteres">1.6%</span> de interés mensual.</h3>
 
                     <div class="total ">
                         <h4>Recibiras un total de:</h4>
