--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="right">
                 <div class="pre-simulation  " id="pre-simulation">
-                    <img src="img/img-simulator.svg" alt="">
+                    <img src="img/undraw_digital-currency_u5p6.png" alt="">
                 </div>
                 <!-- La clase disabled debe ponerse en el contendor anterior para mostrar el resultado -->
                 <div class="post-simulation  disabled" id="post-simulation">
