--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 
     <section id="simulator">
-        <h1>SIMULADOR DE INVERSIÓN final</h1>
+        <h1>SIMULADOR DE INVERSIÓN</h1>
         <div class="cont-flex">
             <div class="left">
                 <h2>Datos Inversionista</h2>
@@ -72,6 +72,10 @@
         </div>
         
     </section>
+    <footer>
+        <h2>Developer: <a href="https://github.com/KarenHeredia1621">Karen Heredia Urriaga</a>
+ </h2>
+    </footer>
     <script src="js/main.js"></script>
 </body>
 </html>
